feat: add file parsing error modal and improve error handling for file uploads (#474)
* feat: add file parsing error modal and improve error handling for file uploads

* chore: add translation

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] حفظ، [Ctrl+Shift+Enter] حفظ وإعادة الإرسال",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] إرسال، [Shift+Enter] فاصل سطر، [Ctrl+Enter] إرسال بدون توليد",
+  "{{count}} conversations could not be recovered due to data read errors": "لم يتم استرداد {{count}} محادثة بسبب أخطاء في قراءة البيانات",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} ملفات غير مدعومة: {{files}}. التنسيقات المدعومة: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} خوادم MCP مستوردة",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "يوجد مزود بهذا المعرف بالفعل. ستؤدي المتابعة إلى الكتابة فوق التكوين الحالي.",
@@ -174,6 +175,7 @@
   "creative": "إبداعي",
   "Current conversation configured with specific model settings": "المحادثة الحالية مُعدّة بإعدادات نموذج محددة",
   "Current input": "الإدخال الحالي",
+  "current model": "النموذج الحالي",
   "Current model {{modelName}} does not support image input, using OCR to process images": "النموذج الحالي {{modelName}} لا يدعم إدخال الصور، باستخدام التعرف الضوئي على الحروف (OCR) لمعالجة الصور",
   "Current thread": "المحادثة الحالية",
   "Custom": "مخصص",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "فشل في تحميل تكوين نماذج Chatbox AI",
   "Failed to load license details": "فشل في تحميل تفاصيل الترخيص",
   "Failed to open file dialog: {{error}}": "فشل في فتح نافذة الملف: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "فشل في تحليل الملف. الرجاء المحاولة مرة أخرى أو استخدام تنسيق ملف مختلف.",
   "Failed to read from clipboard": "فشل في القراءة من الحافظة",
   "Failed to save file: {{error}}": "فشل حفظ الملف: {{error}}",
   "Failed to save login tokens": "فشل في حفظ رموز تسجيل الدخول",
@@ -279,8 +282,10 @@
   "Favorite": "المفضلة",
   "Feedback": "التغذية الراجعة",
   "Fetch": "استرداد",
+  "File": "ملف",
   "File Chunks": "أجزاء الملف",
   "File Chunks Preview": "معاينة أجزاء الملف",
+  "File Processing Error": "خطأ في معالجة الملف",
   "File saved to {{uri}}": "حُفظ الملف إلى {{uri}}",
   "File Search": "بحث الملفات",
   "File Size": "حجم الملف",
@@ -570,6 +575,7 @@
   "send": "إرسال",
   "Send": "إرسال",
   "Send Without Generating Response": "إرسال بدون توليد استجابة",
+  "Session Raw JSON": "جلسة JSON الخام",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "تعيين الحد الأقصى لعدد الرموز المميزة لإخراج النموذج. يرجى تعيينه ضمن النطاق المقبول للنموذج، وإلا قد تحدث أخطاء.",
   "Setting the avatar for Copilot": "إعداد صورة مساعد الطيار",
   "settings": "الإعدادات",
@@ -713,6 +719,7 @@
   "View historical threads": "عرض المحادثات التاريخية",
   "View Message JSON": "عرض رسالة JSON",
   "View More Plans": "عرض المزيد من الخطط",
+  "View Session JSON": "عرض JSON الجلسة",
   "Violence or dangerous content": "محتوى عنيد أو مخيف",
   "Vision": "الرؤية",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "قدرة الرؤية غير مفعلة للنموذج {{model}}. الرجاء تفعيلها أو تعيين نموذج OCR افتراضي في <OpenSettingButton>الإعدادات</OpenSettingButton>",
