--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Strg+Enter] Speichern, [Strg+Umschalt+Enter] Speichern und erneut senden",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] senden, [Shift+Enter] Zeilenumbruch, [Strg+Enter] senden ohne Generierung",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} Konversationen konnten aufgrund von Datenlesefehlern nicht wiederhergestellt werden",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} Datei(en) nicht unterstützt: {{files}}. Unterstützte Formate: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} MCP Server importiert",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Ein Anbieter mit dieser ID existiert bereits. Wenn Sie fortfahren, wird die bestehende Konfiguration überschrieben.",
@@ -174,6 +175,7 @@
   "creative": "Kreativ",
   "Current conversation configured with specific model settings": "Aktuelle Unterhaltung konfiguriert mit spezifischen Modelleinstellungen",
   "Current input": "Aktuelle Eingabe",
+  "current model": "Aktuelles Modell",
   "Current model {{modelName}} does not support image input, using OCR to process images": "Aktuelles Modell {{modelName}} unterstützt keine Bildeingabe, verwendet OCR zur Bildverarbeitung",
   "Current thread": "Aktueller Thread",
   "Custom": "Benutzerdefiniert",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "Fehler beim Laden der Chatbox AI-Modelle-Konfiguration",
   "Failed to load license details": "Fehler beim Laden der Lizenzdetails",
   "Failed to open file dialog: {{error}}": "Fehler beim Öffnen des Dateidialogs: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Fehler beim Parsen der Datei. Bitte versuchen Sie es erneut oder verwenden Sie ein anderes Dateiformat.",
   "Failed to read from clipboard": "Fehler beim Lesen aus der Zwischenablage",
   "Failed to save file: {{error}}": "Fehler beim Speichern der Datei: {{error}}",
   "Failed to save login tokens": "Speichern der Login-Tokens fehlgeschlagen",
@@ -279,8 +282,10 @@
   "Favorite": "Favorit",
   "Feedback": "Feedback",
   "Fetch": "Abrufen",
+  "File": "Datei",
   "File Chunks": "Dateiblöcke",
   "File Chunks Preview": "Dateiblöcke-Vorschau",
+  "File Processing Error": "Dateiverarbeitungsfehler",
   "File saved to {{uri}}": "Datei gespeichert unter {{uri}}",
   "File Search": "Dateisuche",
   "File Size": "Dateigröße",
@@ -571,6 +576,7 @@
   "send": "Senden",
   "Send": "Senden",
   "Send Without Generating Response": "Senden, ohne eine Antwort zu generieren",
+  "Session Raw JSON": "Roh-JSON der Sitzung",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Legen Sie die maximale Anzahl von Tokens für die Modellausgabe fest. Bitte stellen Sie sicher, dass der Wert innerhalb des akzeptablen Bereichs des Modells liegt, da es sonst zu Fehlern kommen kann.",
   "Setting the avatar for Copilot": "Einstellen des Avatars für den Co-Piloten",
   "settings": "einstellungen",
@@ -714,6 +720,7 @@
   "View historical threads": "Historische Threads anzeigen",
   "View Message JSON": "Nachricht JSON anzeigen",
   "View More Plans": "Mehr Pläne ansehen",
+  "View Session JSON": "Sitzungs-JSON anzeigen",
   "Violence or dangerous content": "Gewalt oder gefährliche Inhalte",
   "Vision": "Vision",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "Die Vision-Fähigkeit ist für Modell {{model}} nicht aktiviert. Bitte aktivieren Sie sie oder legen Sie ein Standard-OCR-Modell unter <OpenSettingButton>Einstellungen</OpenSettingButton> fest.",
