--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Guardar, [Ctrl+Shift+Enter] Guardar y reenviar",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] enviar, [Shift+Enter] salto de línea, [Ctrl+Enter] enviar sin generar",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversaciones no se pudieron recuperar debido a errores de lectura de datos",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} archivo(s) no compatible(s): {{files}}. Formatos compatibles: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} servidores MCP importados",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Ya existe un proveedor con esta ID. Si continúa, se sobrescribirá la configuración existente.",
@@ -174,6 +175,7 @@
   "creative": "Creativo",
   "Current conversation configured with specific model settings": "Conversación actual configurada con ajustes de modelo específicos",
   "Current input": "Entrada actual",
+  "current model": "Modelo actual",
   "Current model {{modelName}} does not support image input, using OCR to process images": "El modelo actual {{modelName}} no admite entrada de imágenes, usando OCR para procesar imágenes",
   "Current thread": "Hilo actual",
   "Custom": "Personalizado",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "No se pudo cargar la configuración de los modelos de Chatbox AI",
   "Failed to load license details": "Error al cargar los detalles de la licencia",
   "Failed to open file dialog: {{error}}": "Error al abrir el diálogo de archivo: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Error al analizar el archivo. Vuelve a intentarlo o usa un formato de archivo diferente.",
   "Failed to read from clipboard": "No se pudo leer del portapapeles",
   "Failed to save file: {{error}}": "No se pudo guardar el archivo: {{error}}",
   "Failed to save login tokens": "No se pudieron guardar los tokens de inicio de sesión",
@@ -279,8 +282,10 @@
   "Favorite": "Favorito",
   "Feedback": "Comentarios",
   "Fetch": "Obtener",
+  "File": "Archivo",
   "File Chunks": "Fragmentos de archivo",
   "File Chunks Preview": "Vista previa de fragmentos de archivo",
+  "File Processing Error": "Error de procesamiento de archivo",
   "File saved to {{uri}}": "Archivo guardado en {{uri}}",
   "File Search": "Búsqueda de Archivos",
   "File Size": "Tamaño del archivo",
@@ -570,6 +575,7 @@
   "send": "Enviar",
   "Send": "Enviar",
   "Send Without Generating Response": "Enviar sin generar respuesta",
+  "Session Raw JSON": "JSON sin procesar de la sesión",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Establece el número máximo de tokens para la salida del modelo. Por favor, ajústalo dentro del rango aceptable del modelo, de lo contrario pueden ocurrir errores.",
   "Setting the avatar for Copilot": "Configurar el avatar para el copiloto",
   "settings": "configuraciones",
@@ -713,6 +719,7 @@
   "View historical threads": "Ver hilos históricos",
   "View Message JSON": "Ver Mensaje JSON",
   "View More Plans": "Ver más planes",
+  "View Session JSON": "Ver Sesión JSON",
   "Violence or dangerous content": "Contenido violento o peligroso",
   "Vision": "Visión",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "La capacidad de visión no está habilitada para el modelo {{model}}. Por favor, habilítela o configure un modelo OCR predeterminado en <OpenSettingButton>Ajustes</OpenSettingButton>",
