--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Enregistrer, [Ctrl+Shift+Enter] Enregistrer et Renvoyer",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Entrée] envoyer, [Maj+Entrée] saut de ligne, [Ctrl+Entrée] envoyer sans générer",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversations n'ont pas pu être récupérées en raison d'erreurs de lecture de données",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fichier(s) non pris en charge : {{files}}. Formats pris en charge : {{formats}}",
   "{{count}} MCP servers imported": "{{count}} serveurs MCP importés",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Un fournisseur avec cet ID existe déjà. Continuer écrasera la configuration existante.",
@@ -174,6 +175,7 @@
   "creative": "Créatif",
   "Current conversation configured with specific model settings": "Conversation actuelle configurée avec des paramètres de modèle spécifiques",
   "Current input": "Saisie actuelle",
+  "current model": "modèle actuel",
   "Current model {{modelName}} does not support image input, using OCR to process images": "Le modèle actuel {{modelName}} ne prend pas en charge l'entrée d'image ; les images sont traitées par OCR",
   "Current thread": "Sujet actuel",
   "Custom": "Personnalisé",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "Échec du chargement de la configuration des modèles AI de Chatbox",
   "Failed to load license details": "Échec du chargement des détails de la licence",
   "Failed to open file dialog: {{error}}": "Échec de l'ouverture de la boîte de dialogue de fichier : {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Échec de l'analyse du fichier. Veuillez réessayer ou utilisez un format de fichier différent.",
   "Failed to read from clipboard": "Impossible de lire du presse-papiers",
   "Failed to save file: {{error}}": "Échec de l'enregistrement du fichier : {{error}}",
   "Failed to save login tokens": "Échec de l'enregistrement des jetons de connexion",
@@ -279,8 +282,10 @@
   "Favorite": "Favori",
   "Feedback": "Commentaires",
   "Fetch": "Récupérer",
+  "File": "Fichier",
   "File Chunks": "Morceaux de fichier",
   "File Chunks Preview": "Aperçu des morceaux de fichier",
+  "File Processing Error": "Erreur de traitement de fichier",
   "File saved to {{uri}}": "Fichier enregistré dans {{uri}}",
   "File Search": "Recherche de fichiers",
   "File Size": "Taille du fichier",
@@ -571,6 +576,7 @@
   "send": "Envoyer",
   "Send": "Envoyer",
   "Send Without Generating Response": "Envoyer sans générer de réponse",
+  "Session Raw JSON": "JSON Brut de Session",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Définir le nombre maximal de jetons pour la sortie du modèle. Veuillez le définir dans la plage acceptable du modèle, sinon des erreurs peuvent survenir.",
   "Setting the avatar for Copilot": "Définir l'avatar du copilote",
   "settings": "paramètres",
@@ -714,6 +720,7 @@
   "View historical threads": "Voir les sujets historiques",
   "View Message JSON": "Voir le JSON du message",
   "View More Plans": "Voir plus de plans",
+  "View Session JSON": "Afficher le JSON de la session",
   "Violence or dangerous content": "Contenu violent ou dangereux",
   "Vision": "Vision",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "La capacité de vision n'est pas activée pour le modèle {{model}}. Veuillez l'activer ou définir un modèle OCR par défaut dans <OpenSettingButton>Paramètres</OpenSettingButton>",
