--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Invio] Salva, [Ctrl+Maiusc+Invio] Salva e reinvia",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] invia, [Shift+Enter] a capo, [Ctrl+Enter] invia senza generare",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversazioni non sono state recuperate a causa di errori di lettura dei dati",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) non supportati: {{files}}. Formati supportati: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} server MCP importati",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Un provider con questo ID esiste già. Continuare sovrascriverà la configurazione esistente.",
@@ -173,6 +174,7 @@
   "creative": "Creativo",
   "Current conversation configured with specific model settings": "Conversazione attuale configurata con impostazioni del modello specifiche",
   "Current input": "Input corrente",
+  "current model": "modello attuale",
   "Current model {{modelName}} does not support image input, using OCR to process images": "Il modello attuale {{modelName}} non supporta l'input di immagini, utilizzando l'OCR per elaborare le immagini",
   "Current thread": "Thread corrente",
   "Custom": "Personalizzato",
@@ -269,6 +271,7 @@
   "Failed to load Chatbox AI models configuration": "Impossibile caricare la configurazione dei modelli AI di Chatbox",
   "Failed to load license details": "Impossibile caricare i dettagli della licenza",
   "Failed to open file dialog: {{error}}": "Impossibile aprire la finestra di dialogo del file: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Analisi del file non riuscita. Riprova o usa un formato di file diverso.",
   "Failed to read from clipboard": "Impossibile leggere dagli appunti",
   "Failed to save file: {{error}}": "Impossibile salvare il file: {{error}}",
   "Failed to save login tokens": "Impossibile salvare i token di accesso",
@@ -278,8 +281,10 @@
   "Favorite": "Preferito",
   "Feedback": "Feedback",
   "Fetch": "Recupera",
+  "File": "File",
   "File Chunks": "Blocchi di file",
   "File Chunks Preview": "Anteprima blocchi file",
+  "File Processing Error": "Errore nell'elaborazione del file",
   "File saved to {{uri}}": "File salvato in {{uri}}",
   "File Search": "Ricerca file",
   "File Size": "Dimensione file",
@@ -569,6 +574,7 @@
   "send": "Invia",
   "Send": "Invia",
   "Send Without Generating Response": "Invia senza generare risposta",
+  "Session Raw JSON": "JSON grezzo della sessione",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Imposta il numero massimo di token per l'output del modello. Si prega di impostarlo all'interno dell'intervallo accettabile del modello, altrimenti potrebbero verificarsi errori.",
   "Setting the avatar for Copilot": "Impostazione dell'avatar per il Copilot",
   "settings": "impostazioni",
@@ -711,6 +717,7 @@
   "View historical threads": "Visualizza thread storici",
   "View Message JSON": "Visualizza JSON messaggio",
   "View More Plans": "Visualizza altri piani",
+  "View Session JSON": "Visualizza Sessione JSON",
   "Violence or dangerous content": "Contenuto violento o pericoloso",
   "Vision": "Visione",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "La funzionalità di visione non è abilitata per il modello {{model}}. Abilitarla o impostare un modello OCR predefinito in <OpenSettingButton>Impostazioni</OpenSettingButton>",
