--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 保存, [Ctrl+Shift+Enter] 保存して再送信",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] 送信、[Shift+Enter] 改行、[Ctrl+Enter] 生成せずに送信",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} 件の会話は、データ読み取りエラーのため復元できませんでした",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}}個のファイルはサポートされていません: {{files}}。サポートされている形式: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} MCPサーバーがインポートされました",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "このIDの提供方が既に存在します。続行すると、既存の設定が上書きされます。",
@@ -174,6 +175,7 @@
   "creative": "クリエイティブ",
   "Current conversation configured with specific model settings": "現在の会話は特定のモデル設定で構成されています",
   "Current input": "現在の入力",
+  "current model": "現在のモデル",
   "Current model {{modelName}} does not support image input, using OCR to process images": "現在のモデル {{modelName}} は画像入力に対応していません。OCRで画像を処理します",
   "Current thread": "現在のスレッド",
   "Custom": "カスタム",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "Chatbox AI モデル設定の読み込みに失敗しました",
   "Failed to load license details": "ライセンス情報の読み込みに失敗しました",
   "Failed to open file dialog: {{error}}": "ファイルダイアログを開けませんでした: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "ファイルの解析に失敗しました。もう一度お試しいただくか、別のファイル形式を使用してください。",
   "Failed to read from clipboard": "クリップボードからの読み取りに失敗しました",
   "Failed to save file: {{error}}": "ファイルの保存に失敗しました: {{error}}",
   "Failed to save login tokens": "ログイン トークンの保存に失敗しました",
@@ -279,8 +282,10 @@
   "Favorite": "お気に入り",
   "Feedback": "フィードバック",
   "Fetch": "取得",
+  "File": "ファイル",
   "File Chunks": "ファイルチャンク",
   "File Chunks Preview": "ファイルチャンクプレビュー",
+  "File Processing Error": "ファイル処理エラー",
   "File saved to {{uri}}": "ファイルが{{uri}}に保存されました",
   "File Search": "ファイル検索",
   "File Size": "ファイルサイズ",
@@ -571,6 +576,7 @@
   "send": "送信",
   "Send": "送信",
   "Send Without Generating Response": "レスポンスを生成せずに送信",
+  "Session Raw JSON": "セッション生JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "モデル出力の最大トークン数を設定します。モデルが許容する範囲内で設定してください。そうしないとエラーが発生する可能性があります。",
   "Setting the avatar for Copilot": "コパイロットのアバターを設定",
   "settings": "設定",
@@ -714,6 +720,7 @@
   "View historical threads": "過去のスレッドを表示",
   "View Message JSON": "メッセージ JSON を表示",
   "View More Plans": "プランをもっと見る",
+  "View Session JSON": "セッションJSONを表示",
   "Violence or dangerous content": "暴力または危険な内容",
   "Vision": "ビジョン",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "モデル{{model}}のVision機能が有効になっていません。有効にするか、<OpenSettingButton>設定</OpenSettingButton>でデフォルトのOCRモデルを設定してください。",
