--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 저장, [Ctrl+Shift+Enter] 저장 및 재전송",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] 전송, [Shift+Enter] 줄 바꿈, [Ctrl+Enter] 생성하지 않고 전송",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}}개의 대화를 데이터 읽기 오류로 인해 복구할 수 없습니다",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}}개의 파일이 지원되지 않습니다: {{files}}. 지원되는 형식: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} MCP 서버 가져옴",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "이 ID를 가진 제공자가 이미 존재합니다. 계속하면 기존 구성이 덮어쓰여집니다.",
@@ -174,6 +175,7 @@
   "creative": "창의적인",
   "Current conversation configured with specific model settings": "현재 대화 특정 모델 설정으로 구성됨",
   "Current input": "현재 입력",
+  "current model": "현재 모델",
   "Current model {{modelName}} does not support image input, using OCR to process images": "현재 모델 {{modelName}}은(는) 이미지 입력을 지원하지 않아 OCR을 사용하여 이미지를 처리합니다",
   "Current thread": "현재 스레드",
   "Custom": "사용자 정의",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "Chatbox AI 모델 구성 불러오기 실패",
   "Failed to load license details": "라이선스 세부 정보 로드 실패",
   "Failed to open file dialog: {{error}}": "파일 대화 상자를 여는 데 실패했습니다: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "파일 구문 분석에 실패했습니다. 다시 시도하거나 다른 파일 형식을 사용해 주세요.",
   "Failed to read from clipboard": "클립보드에서 읽기 실패",
   "Failed to save file: {{error}}": "파일 저장 실패: {{error}}",
   "Failed to save login tokens": "로그인 토큰 저장 실패",
@@ -279,8 +282,10 @@
   "Favorite": "즐겨찾기",
   "Feedback": "피드백",
   "Fetch": "가져오기",
+  "File": "파일",
   "File Chunks": "파일 청크",
   "File Chunks Preview": "파일 청크 미리보기",
+  "File Processing Error": "파일 처리 오류",
   "File saved to {{uri}}": "파일이 {{uri}}에 저장되었습니다.",
   "File Search": "파일 검색",
   "File Size": "파일 크기",
@@ -571,6 +576,7 @@
   "send": "전송",
   "Send": "전송",
   "Send Without Generating Response": "응답 생성 없이 전송",
+  "Session Raw JSON": "세션 원시 JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "모델 출력의 최대 토큰 수를 설정합니다. 모델의 허용 범위 내에서 설정해 주세요. 그렇지 않으면 오류가 발생할 수 있습니다.",
   "Setting the avatar for Copilot": "동반자의 아바타 설정",
   "settings": "설정",
@@ -714,6 +720,7 @@
   "View historical threads": "과거 스레드 보기",
   "View Message JSON": "메시지 JSON 보기",
   "View More Plans": "더 많은 플랜 보기",
+  "View Session JSON": "세션 JSON 보기",
   "Violence or dangerous content": "폭력적 또는 위험한 내용",
   "Vision": "비전",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "모델 {{model}}에 대해 시각 기능이 활성화되어 있지 않습니다. 활성화하거나 <OpenSettingButton>설정</OpenSettingButton>에서 기본 OCR 모델을 설정해주세요.",
