--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Lagre, [Ctrl+Shift+Enter] Lagre og send på nytt",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] send, [Shift+Enter] linjeskift, [Ctrl+Enter] send uten å generere",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} samtaler kunne ikke gjenopprettes på grunn av datalesingsfeil",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fil(er) støttes ikke: {{files}}. Støttede formater: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} MCP servere importert",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "En tilbyder med denne ID-en finnes allerede. Fortsetter du, vil den eksisterende konfigurasjonen overskrives.",
@@ -174,6 +175,7 @@
   "creative": "Kreativ",
   "Current conversation configured with specific model settings": "Gjeldende samtale konfigurert med spesifikke modellinnstillinger",
   "Current input": "Gjeldende inndata",
+  "current model": "Nåværende modell",
   "Current model {{modelName}} does not support image input, using OCR to process images": "Gjeldende modell {{modelName}} støtter ikke bildeinndata, bruker OCR for å behandle bilder",
   "Current thread": "Nåværende tråd",
   "Custom": "Tilpasset",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "Kunne ikke laste inn Chatbox AI-modellkonfigurasjon",
   "Failed to load license details": "Klarte ikke å laste inn lisensdetaljer",
   "Failed to open file dialog: {{error}}": "Mislyktes i å åpne filvelger: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Filen kunne ikke analyseres. Prøv igjen, eller bruk et annet filformat.",
   "Failed to read from clipboard": "Klarte ikke å lese fra utklippstavlen",
   "Failed to save file: {{error}}": "Kunne ikke lagre fil: {{error}}",
   "Failed to save login tokens": "Kunne ikke lagre påloggingstokener",
@@ -279,8 +282,10 @@
   "Favorite": "Favoritt",
   "Feedback": "Tilbakemelding",
   "Fetch": "Hent",
+  "File": "Fil",
   "File Chunks": "Filbiter",
   "File Chunks Preview": "Forhåndsvisning av filbiter",
+  "File Processing Error": "Filbehandlingsfeil",
   "File saved to {{uri}}": "Fil lagret til {{uri}}",
   "File Search": "Filsøk",
   "File Size": "Filstørrelse",
@@ -570,6 +575,7 @@
   "send": "Send",
   "Send": "Send",
   "Send Without Generating Response": "Send uten å generere svar",
+  "Session Raw JSON": "Økt Rå JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Angi maksimalt antall tokens for modellens utdata. Vennligst angi det innenfor modellens akseptable område, ellers kan feil oppstå.",
   "Setting the avatar for Copilot": "Angi avatar for Copilot",
   "settings": "Innstillinger",
@@ -713,6 +719,7 @@
   "View historical threads": "Vis historiske tråder",
   "View Message JSON": "Vis meldings-JSON",
   "View More Plans": "Se flere abonnementer",
+  "View Session JSON": "Vis Sesjons-JSON",
   "Violence or dangerous content": "Vold eller farlig innhold",
   "Vision": "Syn",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "Synsfunksjonalitet er ikke aktivert for modell {{model}}. Vennligst aktiver den eller angi en standard OCR-modell i <OpenSettingButton>Innstillinger</OpenSettingButton>",
