--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Guardar, [Ctrl+Shift+Enter] Guardar e Reenviar",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] enviar, [Shift+Enter] quebra de linha, [Ctrl+Enter] enviar sem gerar",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversas não puderam ser recuperadas devido a erros de leitura de dados",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} ficheiro(s) não suportado(s): {{files}}. Formatos suportados: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} servidores MCP importados",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Já existe um fornecedor com este ID. Ao continuar, a configuração existente será substituída.",
@@ -174,6 +175,7 @@
   "creative": "Criativo",
   "Current conversation configured with specific model settings": "Conversa atual configurada com definições específicas do modelo",
   "Current input": "Entrada atual",
+  "current model": "Modelo atual",
   "Current model {{modelName}} does not support image input, using OCR to process images": "O modelo atual {{modelName}} não suporta entrada de imagem, a usar OCR para processar imagens",
   "Current thread": "Tópico Atual",
   "Custom": "Personalizado",
@@ -269,6 +271,7 @@
   "Failed to load Chatbox AI models configuration": "Falha ao carregar a configuração dos modelos de AI do Chatbox",
   "Failed to load license details": "Não foi possível carregar os detalhes da licença",
   "Failed to open file dialog: {{error}}": "Falha ao abrir a caixa de diálogo de ficheiros: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Falha ao analisar o ficheiro. Por favor, tente novamente ou utilize um formato de ficheiro diferente.",
   "Failed to read from clipboard": "Falha ao ler da área de transferência",
   "Failed to save file: {{error}}": "Falha ao guardar ficheiro: {{error}}",
   "Failed to save login tokens": "Não foi possível guardar os tokens de login",
@@ -278,8 +281,10 @@
   "Favorite": "Favorito",
   "Feedback": "Feedback",
   "Fetch": "Buscar",
+  "File": "Ficheiro",
   "File Chunks": "Fragmentos de Ficheiro",
   "File Chunks Preview": "Pré-visualização de Fragmentos de Ficheiro",
+  "File Processing Error": "Erro no Processamento do Ficheiro",
   "File saved to {{uri}}": "Ficheiro guardado em {{uri}}",
   "File Search": "Pesquisa de Ficheiros",
   "File Size": "Tamanho do Ficheiro",
@@ -570,6 +575,7 @@
   "send": "Enviar",
   "Send": "Enviar",
   "Send Without Generating Response": "Enviar Sem Gerar Resposta",
+  "Session Raw JSON": "JSON Bruto da Sessão",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Definir o número máximo de tokens para a saída do modelo. Por favor, defina-o dentro do intervalo aceitável do modelo, caso contrário, poderão ocorrer erros.",
   "Setting the avatar for Copilot": "Configurar o avatar para Copiloto",
   "settings": "definições",
@@ -712,6 +718,7 @@
   "View historical threads": "Ver tópicos históricos",
   "View Message JSON": "Ver Mensagem JSON",
   "View More Plans": "Ver Mais Planos",
+  "View Session JSON": "THOUGHTS: The user wants to translate \"View Session JSON\" from English to European Portuguese.\n\"View\" translates to \"Ver\".\n\"Session JSON\" refers to a specific data format and can often be kept as is, or translated literally if it makes sense. In UI, technical terms like \"JSON\" are often left untranslated. \"Sessão\" for \"Session\" is correct.\n\nCombining them, \"Ver JSON da Sessão\" or \"Ver JSON de Sessão\" would be appropriate. \"Da\" or \"de\" works here; \"da\" feels slightly more natural if \"JSON\" is considered the property of \"Sessão\".Ver JSON da Sessão",
   "Violence or dangerous content": "Violência ou conteúdo perigoso",
   "Vision": "Visão",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "A capacidade de visão não está ativada para o Modelo {{model}}. Por favor, ative-a ou defina um modelo OCR predefinido em <OpenSettingButton>Definições</OpenSettingButton>",
