--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Сохранить, [Ctrl+Shift+Enter] Сохранить и отправить заново",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] отправить, [Shift+Enter] перенос строки, [Ctrl+Enter] отправить без генерации",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} диалогов не удалось восстановить из-за ошибок чтения данных",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} файл(ы) не поддерживаются: {{files}}. Поддерживаемые форматы: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} MCP серверов импортировано",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Поставщик с этим ID уже существует. Продолжение перезапишет существующую конфигурацию.",
@@ -174,6 +175,7 @@
   "creative": "Творческий",
   "Current conversation configured with specific model settings": "Текущий разговор сконфигурирован со специфическими настройками модели",
   "Current input": "Текущий ввод",
+  "current model": "Текущая модель",
   "Current model {{modelName}} does not support image input, using OCR to process images": "Текущая модель {{modelName}} не поддерживает ввод изображений, поэтому для обработки изображений используется OCR.",
   "Current thread": "Текущая тема",
   "Custom": "Пользовательский",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "Не удалось загрузить конфигурацию моделей Chatbox AI",
   "Failed to load license details": "Не удалось загрузить сведения о лицензии",
   "Failed to open file dialog: {{error}}": "Не удалось открыть диалоговое окно файла: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Не удалось обработать файл. Повторите попытку или используйте другой формат файла.",
   "Failed to read from clipboard": "Не удалось прочитать из буфера обмена",
   "Failed to save file: {{error}}": "Не удалось сохранить файл: {{error}}",
   "Failed to save login tokens": "Не удалось сохранить токены входа",
@@ -279,8 +282,10 @@
   "Favorite": "Избранное",
   "Feedback": "Обратная связь",
   "Fetch": "Получить",
+  "File": "Файл",
   "File Chunks": "Фрагменты файла",
   "File Chunks Preview": "Предварительный просмотр чанков файла",
+  "File Processing Error": "Ошибка обработки файла",
   "File saved to {{uri}}": "Файл сохранен в {{uri}}",
   "File Search": "Поиск файлов",
   "File Size": "Размер файла",
@@ -571,6 +576,7 @@
   "send": "Отправить",
   "Send": "Отправить",
   "Send Without Generating Response": "Отправить без генерации ответа",
+  "Session Raw JSON": "Исходный JSON сессии",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Установите максимальное количество токенов для вывода модели. Установите его в пределах допустимого диапазона модели, иначе могут возникнуть ошибки.",
   "Setting the avatar for Copilot": "Установка аватара для Copilot",
   "settings": "настройки",
@@ -714,6 +720,7 @@
   "View historical threads": "Просмотреть историю тем",
   "View Message JSON": "Просмотреть JSON сообщения",
   "View More Plans": "Просмотреть больше планов",
+  "View Session JSON": "Просмотр JSON сессии",
   "Violence or dangerous content": "Опасное или опасное содержимое",
   "Vision": "Видение",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "Возможность распознавания изображений не включена для модели {{model}}. Пожалуйста, включите ее или установите модель OCR по умолчанию в <OpenSettingButton>Настройки</OpenSettingButton>",
