--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Spara, [Ctrl+Shift+Enter] Spara och skicka igen",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] skicka, [Shift+Enter] radbrytning, [Ctrl+Enter] skicka utan generering",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} konversationer kunde inte återställas på grund av dataläsningsfel",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fil(er) stöds inte: {{files}}. Format som stöds: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} MCP servrar importerade",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "En leverantör med detta ID finns redan. Om du fortsätter kommer den befintliga konfigurationen att skrivas över.",
@@ -174,6 +175,7 @@
   "creative": "Kreativ",
   "Current conversation configured with specific model settings": "Nuvarande konversation konfigurerad med specifika modellinställningar",
   "Current input": "Nuvarande inmatning",
+  "current model": "Nuvarande modell",
   "Current model {{modelName}} does not support image input, using OCR to process images": "Aktuell modell {{modelName}} stöder inte bildinmatning, använder OCR för att bearbeta bilder",
   "Current thread": "Aktuell tråd",
   "Custom": "Anpassad",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "Misslyckades att ladda Chatbox AI-modellkonfiguration",
   "Failed to load license details": "Misslyckades att ladda licensinformation",
   "Failed to open file dialog: {{error}}": "Misslyckades att öppna fildialog: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Det gick inte att parsa filen. Försök igen eller använd ett annat filformat.",
   "Failed to read from clipboard": "Kunde inte läsa från urklipp",
   "Failed to save file: {{error}}": "Kunde inte spara filen: {{error}}",
   "Failed to save login tokens": "Misslyckades att spara inloggningstokens",
@@ -279,8 +282,10 @@
   "Favorite": "Favorit",
   "Feedback": "Återkoppling",
   "Fetch": "Hämta",
+  "File": "Fil",
   "File Chunks": "Filsegment",
   "File Chunks Preview": "Förhandsgranskning av filsegment",
+  "File Processing Error": "Filbearbetningsfel",
   "File saved to {{uri}}": "Fil sparad till {{uri}}",
   "File Search": "Filsökning",
   "File Size": "Filstorlek",
@@ -570,6 +575,7 @@
   "send": "Skicka",
   "Send": "Skicka",
   "Send Without Generating Response": "Skicka utan att generera svar",
+  "Session Raw JSON": "Sessionsrå JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Ställ in det maximala antalet tokens för modellens utdata. Vänligen ställ in det inom modellens acceptabla intervall, annars kan fel uppstå.",
   "Setting the avatar for Copilot": "Ställ in profilbild för Copilot",
   "settings": "inställningar",
@@ -714,6 +720,7 @@
   "View historical threads": "Visa trådhistorik",
   "View Message JSON": "Visa meddelande JSON",
   "View More Plans": "Visa fler abonnemang",
+  "View Session JSON": "Visa Session JSON",
   "Violence or dangerous content": "Våldsamt eller farligt innehåll",
   "Vision": "Vision",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "Visuella funktioner är inte aktiverade för modell {{model}}. Vänligen aktivera den eller ställ in en standard OCR-modell i <OpenSettingButton>Inställningar</OpenSettingButton>",
