--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 保存, [Ctrl+Shift+Enter] 保存并发送",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[回车键] 发送，[Shift+回车键] 换行, [Ctrl+回车键] 发送但不生成",
+  "{{count}} conversations could not be recovered due to data read errors": "由于数据读取错误，{{count}} 个对话无法恢复",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} 个文件不支持：{{files}}。支持的格式：{{formats}}",
   "{{count}} MCP servers imported": "{{count}} 个 MCP 服务器已导入",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "此ID的提供方已存在。继续将覆盖现有配置。",
@@ -174,6 +175,7 @@
   "creative": "想象发散",
   "Current conversation configured with specific model settings": "当前的对话配置了特定的模型设置",
   "Current input": "当前输入",
+  "current model": "当前模型",
   "Current model {{modelName}} does not support image input, using OCR to process images": "当前模型 {{modelName}} 不支持图像输入，正在使用 OCR 处理图像",
   "Current thread": "当前话题",
   "Custom": "自定义",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "加载 Chatbox AI 模型配置失败",
   "Failed to load license details": "许可证详情加载失败",
   "Failed to open file dialog: {{error}}": "无法打开文件对话框：{{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "文件解析失败。请重试或使用其他文件格式。",
   "Failed to read from clipboard": "无法从剪贴板读取",
   "Failed to save file: {{error}}": "保存文件失败: {{error}}",
   "Failed to save login tokens": "保存登录凭证失败",
@@ -279,8 +282,10 @@
   "Favorite": "收藏",
   "Feedback": "建议反馈",
   "Fetch": "获取",
+  "File": "文件",
   "File Chunks": "文件分块",
   "File Chunks Preview": "文件分块预览",
+  "File Processing Error": "文件处理错误",
   "File saved to {{uri}}": "文件已保存到 {{uri}}",
   "File Search": "文件搜索",
   "File Size": "文件大小",
@@ -529,7 +534,6 @@
   "Remote (http/sse)": "远程 (http/sse)",
   "rename": "重命名",
   "Reply Again": "重新回答",
-  "{{count}} conversations could not be recovered due to data read errors": "由于数据读取错误，{{count}} 个对话无法恢复",
   "Reply Again Below": "在下方重新回答",
   "report": "举报",
   "Report Content": "举报内容",
@@ -579,6 +583,7 @@
   "send": "发送",
   "Send": "发送",
   "Send Without Generating Response": "发送但不生成回答",
+  "Session Raw JSON": "会话原始 JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "设置模型输出的最大 token 数量。请将其设置在模型可接受的范围内，否则可能会发生错误。",
   "Setting the avatar for Copilot": "设置我的搭档的头像",
   "settings": "设置",
@@ -663,6 +668,7 @@
   "The Image Creator plugin has been activated for the current conversation": "当前对话启动了 Image Creator 插件",
   "The license key you entered is invalid. Please check your license key and try again.": "您输入的 license key 无效。请检查您的 license key 并重试。",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "topP 参数控制 AI 响应的多样性：较低的值使输出更集中和可预测，而较高的值则允许更多样化和富有创意的回复。",
+  "The web version temporarily does not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "网页版暂时不支持本地解析此文件类型。请使用文本文件（txt、markdown等）或使用<LinkToAdvancedFileProcessing>Chatbox AI 服务</LinkToAdvancedFileProcessing>进行云端文档分析。",
   "Theme": "主题",
   "Thinking": "思考中",
   "Thinking Budget": "思考预算",
@@ -725,6 +731,7 @@
   "View historical threads": "查看历史话题",
   "View Message JSON": "查看消息 JSON",
   "View More Plans": "查看更多方案",
+  "View Session JSON": "查看会话 JSON",
   "Violence or dangerous content": "暴力或危险内容",
   "Vision": "视觉",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "视觉能力未在模型 {{model}} 上启用。请启用它或在<OpenSettingButton>Settings</OpenSettingButton>中设置默认的 OCR 模型。",
