--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -1,6 +1,7 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 儲存, [Ctrl+Shift+Enter] 儲存後重發",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] 傳送、[Shift＋Enter] 換行、[Ctrl＋Enter] 傳送但不產生",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} 個對話因資料讀取錯誤而無法復原",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} 檔案不支援：{{files}}。支援的格式：{{formats}}",
   "{{count}} MCP servers imported": "{{count}} MCP 伺服器已匯入",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "此 ID 的提供方已存在。繼續將覆蓋現有設定。",
@@ -174,6 +175,7 @@
   "creative": "想像發散",
   "Current conversation configured with specific model settings": "當前的對話配置了特定模型設置",
   "Current input": "目前輸入",
+  "current model": "目前模型",
   "Current model {{modelName}} does not support image input, using OCR to process images": "目前模型 {{modelName}} 不支援圖片輸入，將使用 OCR 處理圖片",
   "Current thread": "當前話題",
   "Custom": "自訂",
@@ -270,6 +272,7 @@
   "Failed to load Chatbox AI models configuration": "載入 Chatbox AI 模型配置失敗",
   "Failed to load license details": "載入授權詳情失敗",
   "Failed to open file dialog: {{error}}": "無法開啟檔案對話框：{{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "檔案解析失敗。請再試一次或使用不同的檔案格式。",
   "Failed to read from clipboard": "從剪貼簿讀取失敗",
   "Failed to save file: {{error}}": "儲存檔案失敗：{{error}}",
   "Failed to save login tokens": "儲存登入憑證失敗",
@@ -279,8 +282,10 @@
   "Favorite": "收藏",
   "Feedback": "建議回饋",
   "Fetch": "獲取",
+  "File": "檔案",
   "File Chunks": "檔案區塊",
   "File Chunks Preview": "檔案區塊預覽",
+  "File Processing Error": "檔案處理錯誤",
   "File saved to {{uri}}": "檔案已儲存至 {{uri}}",
   "File Search": "檔案搜尋",
   "File Size": "檔案大小",
@@ -576,6 +581,7 @@
   "send": "傳送",
   "Send": "發送",
   "Send Without Generating Response": "發送但不產生回答",
+  "Session Raw JSON": "會話原始 JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "設定模型輸出的最大 Token 數量。請將其設定在模型可接受的範圍內，否則可能會發生錯誤。",
   "Setting the avatar for Copilot": "設置 Copilot 搭檔的頭像",
   "settings": "設定",
@@ -719,6 +725,7 @@
   "View historical threads": "查看歷史話題",
   "View Message JSON": "檢視訊息 JSON",
   "View More Plans": "瀏覽更多方案",
+  "View Session JSON": "查看會話 JSON",
   "Violence or dangerous content": "暴力或危險內容",
   "Vision": "視覺",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "模型 {{model}} 未啟用視覺能力。請啟用它，或在 <OpenSettingButton>設定</OpenSettingButton> 中設定預設的 OCR 模型。",
