--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend",
+  "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversations could not be recovered due to data read errors",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}",
   "{{count}} MCP servers imported": "{{count}} MCP servers imported",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "A provider with this ID already exists. Continuing will overwrite the existing configuration.",
@@ -143,6 +144,7 @@
   "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.": "Create your first knowledge base to start adding documents and enhance your AI conversations with contextual information.",
   "Current conversation configured with specific model settings": "Current conversation configured with specific model settings",
   "Current input": "Current input",
+  "current model": "current model",
   "Current model {{modelName}} does not support image input, using OCR to process images": "Current model {{modelName}} does not support image input, using OCR to process images",
   "Custom": "Custom",
   "Custom MCP Servers": "Custom MCP Servers",
@@ -222,6 +224,7 @@
   "Failed to load Chatbox AI models configuration": "Failed to load Chatbox AI models configuration",
   "Failed to load license details": "Failed to load license details",
   "Failed to open file dialog: {{error}}": "Failed to open file dialog: {{error}}",
+  "Failed to parse file. Please try again or use a different file format.": "Failed to parse file. Please try again or use a different file format.",
   "Failed to read from clipboard": "Failed to read from clipboard",
   "Failed to save file: {{error}}": "Failed to save file: {{error}}",
   "Failed to save login tokens": "Failed to save login tokens",
@@ -231,8 +234,10 @@
   "Favorite": "Favorite",
   "Feedback": "Feedback",
   "Fetch": "Fetch",
+  "File": "File",
   "File Chunks": "File Chunks",
   "File Chunks Preview": "File Chunks Preview",
+  "File Processing Error": "File Processing Error",
   "File saved to {{uri}}": "File saved to {{uri}}",
   "File Search": "File Search",
   "File Size": "File Size",
@@ -444,7 +449,6 @@
   "RedNote": "RedNote",
   "Refresh": "Refresh",
   "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.": "Regulate the volume of historical messages sent to the AI, striking a harmonious balance between depth of comprehension and the efficiency of responses.",
-  "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversations could not be recovered due to data read errors",
   "Remaining/Total Quota": "Remaining/Total Quota",
   "Remote (http/sse)": "Remote (http/sse)",
   "Reply Again": "Reply Again",
@@ -492,6 +496,7 @@
   "Selected Key": "Selected Key",
   "Send": "Send",
   "Send Without Generating Response": "Send Without Generating Response",
+  "Session Raw JSON": "Session Raw JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.",
   "Settings": "Settings",
   "Setup guide": "Setup guide",
@@ -552,6 +557,7 @@
   "The conversation list has been successfully recovered": "The conversation list has been successfully recovered",
   "The Image Creator plugin has been activated for the current conversation": "The Image Creator plugin has been activated for the current conversation",
   "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.": "The topP parameter controls the diversity of AI responses: lower values make the output more focused and predictable, while higher values allow for more varied and creative replies.",
+  "The web version temporarily does not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.": "The web version temporarily does not support local parsing of this file type. Please use text files (txt, markdown, etc.) or use <LinkToAdvancedFileProcessing>Chatbox AI Service</LinkToAdvancedFileProcessing> for cloud-based document analysis.",
   "Theme": "Theme",
   "Thinking": "Thinking",
   "Thinking Budget": "Thinking Budget",
@@ -603,6 +609,7 @@
   "View All Copilots": "View All Copilots",
   "View Message JSON": "View Message JSON",
   "View More Plans": "View More Plans",
+  "View Session JSON": "View Session JSON",
   "Violence or dangerous content": "Violence or dangerous content",
   "Vision": "Vision",
   "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>": "Vision capability is not enabled for Model {{model}}. Please enable it or set a default OCR model in <OpenSettingButton>Settings</OpenSettingButton>",
